--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,9 @@ target-version = "py313"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "B"]
-ignore = []
+ignore = [
+    "B008",  # fastapi.Depends() in function defaults is intentional
+]
 
 [tool.ruff.format]
 indent-style = "space"
