--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,5 +38,12 @@ jobs:
           uv run ruff format --check src/ tests/
 
       - name: Run tests
-        run: uv run pytest -v
+        run: uv run pytest --cov=src --cov-report=term-missing --cov-report=xml
 
+      - name: Upload coverage reports
+        uses: codecov/codecov-action@v4
+        if: always()
+        with:
+          files: ./coverage.xml
+          fail_ci_if_error: false
+          token: ${{ secrets.CODECOV_TOKEN }}
